2008-03-20  Sven Neumann  <sven@gimp.org>

	* app/gui/gui.c (gui_restore_after_callback): create the empty
	display before the other windows.

	* app/display/gimpdisplayshell.c (gimp_display_shell_new): center
	the empty window and create additional image windows under the
	mouse cursor. Just an experiment ...

2008-03-20  Sven Neumann  <sven@gimp.org>

	* app/config/gimpguiconfig.c: changed default values for
	"toolbox-window-hint" and "dock-window-hint" to "utility".

	* app/widgets/gimptoolbox.c (gimp_toolbox_new): changed window
	title to "Toolbox".

2008-03-20  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_new): make it
	work when called with display->image == NULL. Use a randomly
	picked canvas size for now, more later.

	(gimp_display_shell_fill): add missing call to
	gimp_display_shell_scale_changed().

	* app/gui/gui.c (gui_restore_after_callback): create an empty
	display.

2008-03-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/uri/uri-backend-gio.c (get_protocols): guard against
	g_vfs_get_supported_uri_schemes() returning NULL.

2008-03-20  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimppluginprocedure.c
	(gimp_plug_in_procedure_set_file_proc): don't allow "file:" to be
	registered as prefix. This seems to happen with the uri-gio plug-in
	when no gvfs backends are installed.

2008-03-20  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell.[ch]: shrink-wrap the newly filled
	empty display in an idle function.

2008-03-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/uri/gimpmountoperation.c: make the dialogs transient to
	the progress window if no parent or screen has been set.

2008-03-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/gif-save.c: added a sanity check and abort when
	the image is too large.

2008-03-19  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_canvas_tool_events): enable the right click
	menu on the empty display.
