@@ -1,3 +1,9 @@
+2008-03-20  Martin Nordholts  <martinn@svn.gnome.org>
+
+	* app/gui/gui-vtable.c
+	(gui_display_create): Make the logic clearer.
+	(gui_get_empty_display): New helper function.
+
 2008-03-20  Sven Neumann  <sven@gimp.org>
 
 	* app/gui/gui.c (gui_restore_after_callback): create the empty
